--- a/source/styl/header.styl
+++ b/source/styl/header.styl
@@ -2,9 +2,12 @@
   background-color $header-bg
   color #333
   border none
-  padding 10px 50px 10px 159px
+  padding 10px 50px 10px 177px
   box-sizing( border-box )
   min-height 75px
+  
+  .b-block-b.i-reverse &
+    padding-left 50px
   
   a
     
