--- a/source/components/contact.form/style.styl
+++ b/source/components/contact.form/style.styl
@@ -6,6 +6,9 @@
   width 100%
   position relative
   
+  .b-block-b.i-reverse &
+    padding-top 55px
+  
   @media ( max-width 800px)
     margin-left 0
     padding 0 20px 0 50px
