--- a/source/styl/footer.styl
+++ b/source/styl/footer.styl
@@ -8,6 +8,9 @@
   font-size 10.5pt
   line-height 1.3
   
+  .b-block-b.i-reverse &
+    padding-left 50px
+  
   .b-col-sm-6:nth-child(2)
     text-align right
     
