Fixes for catalog filter

--- a/source/components/catalog.list/filter.styl
+++ b/source/components/catalog.list/filter.styl
@@ -28,11 +28,12 @@
       padding 15px 0 13px
       ib()
       width 100%
+      font-weight bold
+      
       
       &.i-active
         color #fff
-        font-weight bold
-        cursor default
+        //cursor default
         
       &.i-spec
         color #c999fc
@@ -48,7 +49,7 @@
     background-color #151515
     padding 12px 0 7px
     text-align center
-    font-size 9pt
+    font-size 8pt
     display none
     
     .i-menu2 &
@@ -64,7 +65,8 @@
       padding 15px 0 13px
       ib()
       width 100%
-      color $lightest-grey
+      color $light-grey
+      font-weight bold
       
       &:hover,
       &.i-active
@@ -72,14 +74,13 @@
         color #fff
         
       &.i-active
-        font-weight bold
         cursor default
 
   &__menu3
     background-color #0e0e0e
     padding 12px 0 7px
     text-align center
-    font-size 9pt
+    font-size 8pt
     display none
     
     .i-menu3 &
@@ -98,7 +99,8 @@
       padding 15px 0 13px
       ib()
       width 100%
-      color $lightest-grey
+      color $light-grey
+      font-weight bold
       
       &:hover,
       &.i-active
@@ -106,7 +108,6 @@
         color #fff
         
       &.i-active
-        font-weight bold
         cursor default
   
   &__number
@@ -132,7 +133,7 @@
       width 30%
       
     .i-preloader &
-      background url( "/template/images/preloader-17.gif" ) no-repeat center center
+      background url( "/template/images/preloader-00.gif" ) no-repeat center center
     
       .b-estate-filter__num,
       .b-estate-filter__text
