--- a/source/components/contact.form/style.styl
+++ b/source/components/contact.form/style.styl
@@ -8,6 +8,13 @@
   
   .b-block-b.i-reverse &
     padding-top 55px
+    
+    @media ( max-width 1124px)
+      width 100%
+      box-sizing( border-box )
+      margin-left 0
+      padding-right 20px
+      padding-left 50px
   
   @media ( max-width 800px)
     margin-left 0
