Fix some styles and gitignore

--- a/source/components/catalog.list/style.styl
+++ b/source/components/catalog.list/style.styl
@@ -189,10 +189,10 @@
         vertical-align: bottom
         margin-right: 25px
 
-        @media ( max-width 1198px)
+        @media (min-width 800px) and (max-width 920px)
           margin-right: 20px
 
-      @media ( max-width 1198px)
+      @media (min-width 800px) and (max-width 920px)
         width: 185px
         padding: 10px 25px 15px
 
@@ -216,7 +216,7 @@
       overflow: hidden
       opacity(0)
 
-      @media ( max-width 1198px)
+      @media (min-width 800px) and (max-width 920px)
         padding: 25px 20px 30px
         width: 185px
         font-size: 10px
@@ -227,7 +227,7 @@
         font-weight: normal
         margin-top: 8px
         display: inline-block
-        @media ( max-width 1198px)
+        @media (min-width 800px) and (max-width 920px)
           font-size: 9px
 
     &__info
@@ -249,7 +249,7 @@
       overflow: hidden
       opacity(0)
 
-      @media ( max-width 1198px)
+      @media (min-width 800px) and (max-width 920px)
         padding: 20px
         width: 185px
         font-size: 11px
@@ -278,7 +278,7 @@
         display: inline-block
         margin: 0 11px 6px;
         background: url("/template/images/icons/icons.png") no-repeat;
-        @media ( max-width 1198px)
+        @media (min-width 800px) and (max-width 920px)
           margin: 0 6px 6px;
         &:nth-child(4n)
           margin-right: 0
@@ -305,7 +305,7 @@
       width: 100%
       text-transform: lowercase
 
-      @media ( max-width 1198px)
+      @media (min-width 800px) and (max-width 920px)
         font-size: 8px
 
     span&__count
@@ -313,7 +313,7 @@
       font-size: 18px
       margin: 0
 
-      @media ( max-width 1198px)
+      @media (min-width 800px) and (max-width 920px)
         font-size: 13px
 
     span&__folder-icon
