--- a/markup/components/catalog.list/template.html
+++ b/markup/components/catalog.list/template.html
@@ -36,16 +36,72 @@
     </div>
   </div>
 </div>
-<div class="b-estate-list"><a href="/estate/" class="b-estate-list__i i-large-item"><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span><img src="/upload/estates/1.jpg" class="b-estate-list__i__big-img-bw"/><img src="/upload/estates/2.jpg" class="b-estate-list__i__big-img"/>
-    <div style="background-image: url( '/upload/estates/1.jpg' )" class="b-estate-list__img-div-bw"></div>
-    <div style="background-image: url( '/upload/estates/2.jpg' )" class="b-estate-list__img-div"></div><img src="/upload/estates/1-small.jpg" class="b-estate-list__i__small-img-bw"/><img src="/upload/estates/3.jpg" class="b-estate-list__i__small-img"/></a><a href="/estate/" data-img-bw-src="/upload/estates/2-bw.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/2-bw.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/2-bw.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/2-bw.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/2-bw.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__shutter"></span><span class="b-estate-list__i__title">Сосновая аллея</span><span class="b-estate-list__i__props">Лот: 1973<br/><span>Площадь: </span>72—213 м?<br/><span>Район: </span>Тверская<span class="b-estate-list__i__price">120 000 000 руб.</span></span></a>
-  <div class="b-estate-list__empty">
-    <div class="b-estate-list__empty__cont">
-      <div class="b-estate-list__empty__i"></div>
-      <div class="b-estate-list__empty__i"></div>
-      <div class="b-estate-list__empty__i"></div>
-      <div class="b-estate-list__empty__i"></div>
-    </div>
-  </div>
+<div class="b-estate-list"><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__props">Aeroflots<br/><span>Ул. Викторенко, 16, Москва,  Росссия</span><span class="b-estate-list__i__label"><span class="b-estate-list__i__count">80</span><br/>Объектов<span class="b-estate-list__i__folder-icon"></span></span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Aeroflots</span><br/><span>Ул. Викторенко, 16, Москва,  Росссия</span><br/><b>Площадь</b><br/><span>300 м<sup>2</sup></span><br/><b>Комнат</b><span>4</span><br/><b>Продажа</b><span>от 3 000 000 руб</span><br/><b>Аренда</b><span>от 200 000 руб</span><span class="b-estate-list__i__info-icons">
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--med"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><b>Площадь</b><br/><span>189,9 м<sup>2</sup></span><br/><b>Комнат</b><span>4</span><br/><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div></span></span></a><a href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" class="b-estate-list__i"><img src="/template/images/tr.gif" class="b-estate-list__i__img-bw"/><img src="/template/images/tr.gif" class="b-estate-list__i__img"/><span class="b-estate-list__i__hot"><span class="b-estate-list__i__hot-icon"></span>Горячее</span><span class="b-estate-list__i__props">Квартира, F113<br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><span>8 000 000 руб.</span></span><span class="b-estate-list__i__info"><span class="b-estate-list__i__info-title">Квартира, F113</span><br/><span>1-й переулок Тружеников, 17  Москва,  Росссия</span><br/><b>Площадь</b><br/><span>189,9 м<sup>2</sup></span><br/><b>Комнат</b><span>4</span><br/><b>Продажа</b><span>59 000 000 руб</span><span class="b-estate-list__i__info-icons">
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--fit"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--shop"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--beauty"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--edu"></div>
+        <div class="b-estate-list__i__info-icon b-estate-list__i__info-icon--restor"></div></span></span></a>
+  <!--  while n > 0-->
+  <!--    - n---->
+  <!--    a.b-estate-list__i( href="/estate/" data-img-bw-src="/upload/estates/1-small.jpg" data-img-src="/upload/estates/2.jpg" )-->
+  <!--        img.b-estate-list__i__img-bw( src="/template/images/tr.gif" )-->
+  <!--        img.b-estate-list__i__img( src="/template/images/tr.gif" )-->
+  <!--        span.b-estate-list__i__shutter-->
+  <!--        span.b-estate-list__i__props-->
+  <!--            | Aeroflots-->
+  <!--            br-->
+  <!--            span Ул. Викторенко, 16, Москва,  Росссия-->
+  <!--            //span Район:-->
+  <!--            //| Тверская-->
+  <!--            span.b-estate-list__i__label-->
+  <!--                span.b-estate-list__i__count 80-->
+  <!--                br-->
+  <!--                | Объектов-->
+  <!--                span.b-estate-list__i__folder-icon-->
+  <!--        span.b-estate-list__i__info-->
+  <!--            span.b-estate-list__i__info-title Aeroflots-->
+  <!--            br-->
+  <!--            span Ул. Викторенко, 16, Москва,  Росссия-->
+  <!--            br-->
+  <!--            b Площадь-->
+  <!--            br-->
+  <!--            span 300 м-->
+  <!--                sup 2-->
+  <!--            br-->
+  <!--            b Комнат-->
+  <!--            span 4-->
+  <!--            br-->
+  <!--            b Продажа-->
+  <!--            span от 3 000 000 руб-->
+  <!--            br-->
+  <!--            b Аренда-->
+  <!--            span от 200 000 руб-->
+  <!--            span.b-estate-list__i__info-icons-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--fit-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--shop-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--beauty-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--edu-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--restor-->
+  <!--                span.b-estate-list__i__info-icon.b-estate-list__i__info-icon--med-->
 </div>
+<!--.b-estate-list__empty
+//  .b-estate-list__empty__cont
+//    - var n = 4
+//    while n > 0
+//      - n--
+//      .b-estate-list__empty__i
+
+-->
 <!-- end /components/catalog.list/-->
