--- a/source/styl/grid.styl
+++ b/source/styl/grid.styl
@@ -25,9 +25,14 @@
 }
 
 .b-row {
-    margin-right: -1 * $grid-gap
-    margin-left: -1 * $grid-gap
-    clearfix()
+  margin-right: -1 * $grid-gap
+  margin-left: -1 * $grid-gap
+  clearfix()
+
+  @media ( max-width 520px) {
+    margin-right: -20px
+    margin-left: -20px
+  }
 }
 
 .b-col-xs-1,.b-col-sm-1,.b-col-md-1,.b-col-lg-1,.b-col-xs-2,.b-col-sm-2,.b-col-md-2,.b-col-lg-2,.b-col-xs-3,.b-col-sm-3,.b-col-md-3,.b-col-lg-3,.b-col-xs-4,.b-col-sm-4,.b-col-md-4,.b-col-lg-4,.b-col-xs-5,.b-col-sm-5,.b-col-md-5,.b-col-lg-5,.b-col-xs-6,.b-col-sm-6,.b-col-md-6,.b-col-lg-6,.b-col-xs-7,.b-col-sm-7,.b-col-md-7,.b-col-lg-7,.b-col-xs-8,.b-col-sm-8,.b-col-md-8,.b-col-lg-8,.b-col-xs-9,.b-col-sm-9,.b-col-md-9,.b-col-lg-9,.b-col-xs-10,.b-col-sm-10,.b-col-md-10,.b-col-lg-10,.b-col-xs-11,.b-col-sm-11,.b-col-md-11,.b-col-lg-11,.b-col-xs-12,.b-col-sm-12,.b-col-md-12,.b-col-lg-12 {
