--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -282,3 +282,9 @@ ul
 
 .nicescroll-rails
   z-index 20 !important
+
+.row
+
+  @media ( max-width 520px)
+    margin-right -20px
+    margin-left -20px
